# aducm410-hal

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
examples/: blinky.rs
src/: lib.rs
