[package]
edition = "2021"
rust-version = "1.62"
authors = ["RT4BC <bochao.me@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for ADuCM410 series microcontrollers"
documentation = "TODO"
keywords = ["arm", "cortex-m", "aducm410", "hal"]
license = "0BSD"
name = "aducm410-hal"
readme = "README.md"
repository = "https://github.com/rt4bc/aducm410-hal"
version = "0.1.0"

[package.metadata.docs.rs]
features = ["aducm410", "rtic1", "defmt"]
targets = ["thumbv8m.main-none-eabihf"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
nb = "1.1"
bare-metal = { version = "1" }
void = { version = "1.0.2", default-features = false }
fugit = "0.3.7"
fugit-timer = "0.1.3"
# rtic1
rtic-monotonic = { version = "1.0", optional = true }
systick-monotonic = { version = "1.0.1", optional = true }
cortex-m-rtic = { version = "1.1.4", features = [
	"test-critical-section",
], optional = true }

[dependencies.aducm410]
aducm410-staging = {git = "https://github.com/rt4bc/aducm410-staging.git"}

[dependencies.time]
version = "0.3.37"
default-features = false

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
heapless = "0.8"
panic-halt = "1.0.0"

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
aducm410 = ["aducm410/aducm410"]

[[example]]
name = "blinky"
